Fix rotas-chart text vertical alignment in IE, Edge

--- a/sass/blocks/_rota-chart.sass
+++ b/sass/blocks/_rota-chart.sass
@@ -73,7 +73,6 @@ $block: ".rota-chart"
     font-size: 12px
     text-anchor: start
     font-weight: 400
-    dominant-baseline: central
     pointer-events: none
     fill: white
 
